--- a/index.html
+++ b/index.html
@@ -6,54 +6,94 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Step Project "Forkio"</title>
     <link rel="stylesheet" href="./dist/css/styles.min.css">
+    <link rel='preconnect' href='https://fonts.googleapis.com'>
+    <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin>
+    <link href='https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+          rel="stylesheet">
 </head>
 <body>
-    <header class="hero">
-    </header>
-    <section>
-        <h2>Revolutionary editor</h2>
-        <p>Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet vulputate dignissim. Sed id metus id quam auctor
-        molestie eget ut augue.</p>
-        <div>
-            <div>
-                <button>
-                    <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" data-view-component="true" class="octicon octicon-eye">
-                        <path fill-rule="evenodd"
-                            d="M1.679 7.932c.412-.621 1.242-1.75 2.366-2.717C5.175 4.242 6.527 3.5 8 3.5c1.473 0 2.824.742 3.955 1.715 1.124.967 1.954 2.096 2.366 2.717a.119.119 0 010 .136c-.412.621-1.242 1.75-2.366 2.717C10.825 11.758 9.473 12.5 8 12.5c-1.473 0-2.824-.742-3.955-1.715C2.92 9.818 2.09 8.69 1.679 8.068a.119.119 0 010-.136zM8 2c-1.981 0-3.67.992-4.933 2.078C1.797 5.169.88 6.423.43 7.1a1.619 1.619 0 000 1.798c.45.678 1.367 1.932 2.637 3.024C4.329 13.008 6.019 14 8 14c1.981 0 3.67-.992 4.933-2.078 1.27-1.091 2.187-2.345 2.637-3.023a1.619 1.619 0 000-1.798c-.45-.678-1.367-1.932-2.637-3.023C11.671 2.992 9.981 2 8 2zm0 8a2 2 0 100-4 2 2 0 000 4z">
-                        </path>
-                    </svg>
-                    Watch
-                </button>
-                <span>1,397</span>
-            </div>
-            <div>
-                <button>
-                    <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" data-view-component="true" class="octicon octicon-star d-inline-block mr-2">
-                        <path fill-rule="evenodd"
-                            d="M8 .25a.75.75 0 01.673.418l1.882 3.815 4.21.612a.75.75 0 01.416 1.279l-3.046 2.97.719 4.192a.75.75 0 01-1.088.791L8 12.347l-3.766 1.98a.75.75 0 01-1.088-.79l.72-4.194L.818 6.374a.75.75 0 01.416-1.28l4.21-.611L7.327.668A.75.75 0 018 .25zm0 2.445L6.615 5.5a.75.75 0 01-.564.41l-3.097.45 2.24 2.184a.75.75 0 01.216.664l-.528 3.084 2.769-1.456a.75.75 0 01.698 0l2.77 1.456-.53-3.084a.75.75 0 01.216-.664l2.24-2.183-3.096-.45a.75.75 0 01-.564-.41L8 2.694v.001z">
-                        </path>
-                    </svg>
-                    Star
-                </button>
-                <span>21,038</span>
-            </div>
-            <div>
-                <button>
-                    <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" data-view-component="true"
-                        class="octicon octicon-star d-inline-block mr-2">
-                        <path fill-rule="evenodd"
-                            d="M8 .25a.75.75 0 01.673.418l1.882 3.815 4.21.612a.75.75 0 01.416 1.279l-3.046 2.97.719 4.192a.75.75 0 01-1.088.791L8 12.347l-3.766 1.98a.75.75 0 01-1.088-.79l.72-4.194L.818 6.374a.75.75 0 01.416-1.28l4.21-.611L7.327.668A.75.75 0 018 .25zm0 2.445L6.615 5.5a.75.75 0 01-.564.41l-3.097.45 2.24 2.184a.75.75 0 01.216.664l-.528 3.084 2.769-1.456a.75.75 0 01.698 0l2.77 1.456-.53-3.084a.75.75 0 01.216-.664l2.24-2.183-3.096-.45a.75.75 0 01-.564-.41L8 2.694v.001z">
-                        </path>
-                    </svg>
-                    Fork
-                </button>
-                <span>4,391</span>
+<header class="header">
+<!--    <div class="container">-->
+        <div class='top-menu container'>
+            <a class='logo' href='#'>
+                <img class="logo__img" src="dist/img/hero-logo.png" alt="logo">
+                <h1 class='logo__title'>ForkIO</h1>
+            </a>
+            <nav class='menu'>
+                <a class='menu__item' href='#'>Overview</a>
+                <a class='menu__item' href='#'>About Fork</a>
+                <a class='menu__item' href='#'>Buying Options</a>
+                <a class='menu__item' href='#'>Support</a>
+            </nav>
+            <div class="button">Buy Now</div>
+            <div class="burger">
+                <svg width="15" height="3" viewBox="0 0 15 3" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect width="15" height="3" rx="1.5" fill="white"/>
+                </svg>
+                <svg width="26" height="3" viewBox="0 0 26 3" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect width="26" height="3" rx="1.5" fill="white"/>
+                </svg>
+                <svg width="26" height="3" viewBox="0 0 26 3" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect width="26" height="3" rx="1.5" fill="white"/>
+                </svg>
             </div>
         </div>
-    </section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <script src='./dist/js/scripts.min.js'></script>
+<!--    </div>-->
+        <h3 class="header__title">Fork App</h3>
+        <h3 class="header__subtitle container">A real gamechanger in the world of web development</h3>
+        <p class="header__description">v. 2.8 For Mac and Windows</p>
+        <div class="button button--download">Download For Free Now</div>
+
+</header>
+<section>
+    <h2>Revolutionary editor</h2>
+    <p>Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet vulputate dignissim. Sed id metus id quam
+        auctor
+        molestie eget ut augue.</p>
+    <div>
+        <div>
+            <button>
+                <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16"
+                     data-view-component="true" class="octicon octicon-eye">
+                    <path fill-rule="evenodd"
+                          d="M1.679 7.932c.412-.621 1.242-1.75 2.366-2.717C5.175 4.242 6.527 3.5 8 3.5c1.473 0 2.824.742 3.955 1.715 1.124.967 1.954 2.096 2.366 2.717a.119.119 0 010 .136c-.412.621-1.242 1.75-2.366 2.717C10.825 11.758 9.473 12.5 8 12.5c-1.473 0-2.824-.742-3.955-1.715C2.92 9.818 2.09 8.69 1.679 8.068a.119.119 0 010-.136zM8 2c-1.981 0-3.67.992-4.933 2.078C1.797 5.169.88 6.423.43 7.1a1.619 1.619 0 000 1.798c.45.678 1.367 1.932 2.637 3.024C4.329 13.008 6.019 14 8 14c1.981 0 3.67-.992 4.933-2.078 1.27-1.091 2.187-2.345 2.637-3.023a1.619 1.619 0 000-1.798c-.45-.678-1.367-1.932-2.637-3.023C11.671 2.992 9.981 2 8 2zm0 8a2 2 0 100-4 2 2 0 000 4z">
+                    </path>
+                </svg>
+                Watch
+            </button>
+            <span>1,397</span>
+        </div>
+        <div>
+            <button>
+                <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16"
+                     data-view-component="true" class="octicon octicon-star d-inline-block mr-2">
+                    <path fill-rule="evenodd"
+                          d="M8 .25a.75.75 0 01.673.418l1.882 3.815 4.21.612a.75.75 0 01.416 1.279l-3.046 2.97.719 4.192a.75.75 0 01-1.088.791L8 12.347l-3.766 1.98a.75.75 0 01-1.088-.79l.72-4.194L.818 6.374a.75.75 0 01.416-1.28l4.21-.611L7.327.668A.75.75 0 018 .25zm0 2.445L6.615 5.5a.75.75 0 01-.564.41l-3.097.45 2.24 2.184a.75.75 0 01.216.664l-.528 3.084 2.769-1.456a.75.75 0 01.698 0l2.77 1.456-.53-3.084a.75.75 0 01.216-.664l2.24-2.183-3.096-.45a.75.75 0 01-.564-.41L8 2.694v.001z">
+                    </path>
+                </svg>
+                Star
+            </button>
+            <span>21,038</span>
+        </div>
+        <div>
+            <button>
+                <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16"
+                     data-view-component="true"
+                     class="octicon octicon-star d-inline-block mr-2">
+                    <path fill-rule="evenodd"
+                          d="M8 .25a.75.75 0 01.673.418l1.882 3.815 4.21.612a.75.75 0 01.416 1.279l-3.046 2.97.719 4.192a.75.75 0 01-1.088.791L8 12.347l-3.766 1.98a.75.75 0 01-1.088-.79l.72-4.194L.818 6.374a.75.75 0 01.416-1.28l4.21-.611L7.327.668A.75.75 0 018 .25zm0 2.445L6.615 5.5a.75.75 0 01-.564.41l-3.097.45 2.24 2.184a.75.75 0 01.216.664l-.528 3.084 2.769-1.456a.75.75 0 01.698 0l2.77 1.456-.53-3.084a.75.75 0 01.216-.664l2.24-2.183-3.096-.45a.75.75 0 01-.564-.41L8 2.694v.001z">
+                    </path>
+                </svg>
+                Fork
+            </button>
+            <span>4,391</span>
+        </div>
+    </div>
+</section>
+<section></section>
+<section></section>
+<section></section>
+<script src='./dist/js/scripts.min.js'></script>
 </body>
 </html>
