revolutionary editor section start

--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Step Project "Forkio"</title>
     <link rel="stylesheet" href="./dist/css/styles.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="hero">
     </header>
-    <section>
-        <h2>Revolutionary editor</h2>
-        <p>Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet vulputate dignissim. Sed id metus id quam auctor
+    <section class="editor-section container">
+        <h2 class="editor-section__title">Revolutionary editor</h2>
+        <p class="editor-section__text">Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet vulputate dignissim. Sed id metus id quam auctor
         molestie eget ut augue.</p>
-        <div>
-            <div>
+        <div class="editor-section__wrapper">
+            <div class="btn-wrapper">
                 <button>
                     <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" data-view-component="true" class="octicon octicon-eye">
                         <path fill-rule="evenodd"
