--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
         </div>
         <h3 class="header__title">Fork App</h3>
-        <h3 class="header__subtitle container">A real gamechanger in the world of web development</h3>
+        <h3 class="header__subtitle">A real gamechanger in the world of web development</h3>
         <p class="header__description">v. 2.8 For Mac and Windows</p>
         <div class="button button--download">Download For Free Now</div>
 
