--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h3 class="header__subtitle">A real gamechanger in the world of web development</h3>
         <p class="header__description">v. 2.8 For Mac and Windows</p>
         <div class="button button--download">Download For Free Now</div>
-
+        <span class="header__trial-text">Unlimited 30-Days Trial Period</span>
 </header>
 <section class="editor-section container">
         <h2 class="editor-section__title">Revolutionary editor</h2>
