--- a/index.html
+++ b/index.html
@@ -14,82 +14,126 @@
 </head>
 <body>
 <header class="header">
-        <div class='top-menu container'>
-            <a class='logo' href='#'>
-                <img class="logo__img" src="dist/img/hero-logo.png" alt="logo">
-                <img class="logo__img-hover" src="dist/img/hero-logo-hover.png" alt="logo">
-                <h1 class='logo__title'>ForkIO</h1>
-            </a>
-            <nav class='menu'>
-                <a class='menu__item' href='#'>Overview</a>
-                <a class='menu__item' href='#'>About Fork</a>
-                <a class='menu__item' href='#'>Buying Options</a>
-                <a class='menu__item' href='#'>Support</a>
-            </nav>
-            <div class="button">Buy Now</div>
-            <div class="burger">
-                <svg width="15" height="3" viewBox="0 0 15 3" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <rect width="15" height="3" rx="1.5" fill="white"/>
-                </svg>
-                <svg width="26" height="3" viewBox="0 0 26 3" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <rect width="26" height="3" rx="1.5" fill="white"/>
-                </svg>
-                <svg width="26" height="3" viewBox="0 0 26 3" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <rect width="26" height="3" rx="1.5" fill="white"/>
-                </svg>
-            </div>
+    <div class='top-menu container'>
+        <a class='logo' href='#'>
+            <img class="logo__img" src="dist/img/hero-logo.png" alt="logo">
+            <img class="logo__img-hover" src="dist/img/hero-logo-hover.png" alt="logo">
+            <h1 class='logo__title'>ForkIO</h1>
+        </a>
+        <nav class='menu'>
+            <a class='menu__item' href='#'>Overview</a>
+            <a class='menu__item' href='#'>About Fork</a>
+            <a class='menu__item' href='#'>Buying Options</a>
+            <a class='menu__item' href='#'>Support</a>
+        </nav>
+        <div class="button">Buy Now</div>
+        <div class="burger">
+            <svg width="15" height="3" viewBox="0 0 15 3" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <rect width="15" height="3" rx="1.5" fill="white"/>
+            </svg>
+            <svg width="26" height="3" viewBox="0 0 26 3" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <rect width="26" height="3" rx="1.5" fill="white"/>
+            </svg>
+            <svg width="26" height="3" viewBox="0 0 26 3" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <rect width="26" height="3" rx="1.5" fill="white"/>
+            </svg>
         </div>
-        <h3 class="header__title">Fork App</h3>
-        <h3 class="header__subtitle">A real gamechanger in the world of web development</h3>
-        <p class="header__description">v. 2.8 For Mac and Windows</p>
-        <div class="button button--download">Download For Free Now</div>
-        <span class="header__trial-text">Unlimited 30-Days Trial Period</span>
+    </div>
+    <h3 class="header__title">Fork App</h3>
+    <h3 class="header__subtitle">A real gamechanger in the world of web development</h3>
+    <p class="header__description">v. 2.8 For Mac and Windows</p>
+    <div class="button button--download">Download For Free Now</div>
+    <span class="header__trial-text">Unlimited 30-Days Trial Period</span>
 </header>
 <section class="editor-section container">
-        <h2 class="editor-section__title">Revolutionary editor</h2>
-        <p class="editor-section__text">Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet vulputate dignissim. Sed id metus id quam auctor
+    <h2 class="editor-section__title">Revolutionary editor</h2>
+    <p class="editor-section__text">Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet vulputate
+        dignissim. Sed id metus id quam auctor
         molestie eget ut augue.</p>
-        <div class="editor-section__wrapper">
-            <div class="btn-wrapper">
-                <button>
-                    <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" data-view-component="true" class="octicon octicon-eye">
-                        <path fill-rule="evenodd"
-                            d="M1.679 7.932c.412-.621 1.242-1.75 2.366-2.717C5.175 4.242 6.527 3.5 8 3.5c1.473 0 2.824.742 3.955 1.715 1.124.967 1.954 2.096 2.366 2.717a.119.119 0 010 .136c-.412.621-1.242 1.75-2.366 2.717C10.825 11.758 9.473 12.5 8 12.5c-1.473 0-2.824-.742-3.955-1.715C2.92 9.818 2.09 8.69 1.679 8.068a.119.119 0 010-.136zM8 2c-1.981 0-3.67.992-4.933 2.078C1.797 5.169.88 6.423.43 7.1a1.619 1.619 0 000 1.798c.45.678 1.367 1.932 2.637 3.024C4.329 13.008 6.019 14 8 14c1.981 0 3.67-.992 4.933-2.078 1.27-1.091 2.187-2.345 2.637-3.023a1.619 1.619 0 000-1.798c-.45-.678-1.367-1.932-2.637-3.023C11.671 2.992 9.981 2 8 2zm0 8a2 2 0 100-4 2 2 0 000 4z">
-                        </path>
-                    </svg>
-                    <div>Watch</div>
-                </button>
-                <span>1,397</span>
-            </div>
-            <div class="btn-wrapper">
-                <button>
-                    <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" data-view-component="true"
-                        class="octicon octicon-star-fill starred-button-icon d-inline-block mr-2">
-                        <path fill-rule="evenodd"
-                            d="M8 .25a.75.75 0 01.673.418l1.882 3.815 4.21.612a.75.75 0 01.416 1.279l-3.046 2.97.719 4.192a.75.75 0 01-1.088.791L8 12.347l-3.766 1.98a.75.75 0 01-1.088-.79l.72-4.194L.818 6.374a.75.75 0 01.416-1.28l4.21-.611L7.327.668A.75.75 0 018 .25z">
-                        </path>
-                    </svg>
-                    <div>Star</div>
-                </button>
-                <span>21,038</span>
-            </div>
-            <div class="btn-wrapper">
-                <button>
-                    <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" data-view-component="true"
-                        class="octicon octicon-repo-forked mr-2">
-                        <path fill-rule="evenodd"
-                            d="M5 3.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm0 2.122a2.25 2.25 0 10-1.5 0v.878A2.25 2.25 0 005.75 8.5h1.5v2.128a2.251 2.251 0 101.5 0V8.5h1.5a2.25 2.25 0 002.25-2.25v-.878a2.25 2.25 0 10-1.5 0v.878a.75.75 0 01-.75.75h-4.5A.75.75 0 015 6.25v-.878zm3.75 7.378a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm3-8.75a.75.75 0 100-1.5.75.75 0 000 1.5z">
-                        </path>
-                    </svg>
-                    <div>Fork</div>
-                </button>
-                <span>4,391</span>
-            </div>
+    <div class="editor-section__wrapper">
+        <div class="btn-wrapper">
+            <button>
+                <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16"
+                     data-view-component="true" class="octicon octicon-eye">
+                    <path fill-rule="evenodd"
+                          d="M1.679 7.932c.412-.621 1.242-1.75 2.366-2.717C5.175 4.242 6.527 3.5 8 3.5c1.473 0 2.824.742 3.955 1.715 1.124.967 1.954 2.096 2.366 2.717a.119.119 0 010 .136c-.412.621-1.242 1.75-2.366 2.717C10.825 11.758 9.473 12.5 8 12.5c-1.473 0-2.824-.742-3.955-1.715C2.92 9.818 2.09 8.69 1.679 8.068a.119.119 0 010-.136zM8 2c-1.981 0-3.67.992-4.933 2.078C1.797 5.169.88 6.423.43 7.1a1.619 1.619 0 000 1.798c.45.678 1.367 1.932 2.637 3.024C4.329 13.008 6.019 14 8 14c1.981 0 3.67-.992 4.933-2.078 1.27-1.091 2.187-2.345 2.637-3.023a1.619 1.619 0 000-1.798c-.45-.678-1.367-1.932-2.637-3.023C11.671 2.992 9.981 2 8 2zm0 8a2 2 0 100-4 2 2 0 000 4z">
+                    </path>
+                </svg>
+                <div>Watch</div>
+            </button>
+            <span>1,397</span>
         </div>
-    </section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <script src='./dist/js/scripts.min.js'></script>
+        <div class="btn-wrapper">
+            <button>
+                <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16"
+                     data-view-component="true"
+                     class="octicon octicon-star-fill starred-button-icon d-inline-block mr-2">
+                    <path fill-rule="evenodd"
+                          d="M8 .25a.75.75 0 01.673.418l1.882 3.815 4.21.612a.75.75 0 01.416 1.279l-3.046 2.97.719 4.192a.75.75 0 01-1.088.791L8 12.347l-3.766 1.98a.75.75 0 01-1.088-.79l.72-4.194L.818 6.374a.75.75 0 01.416-1.28l4.21-.611L7.327.668A.75.75 0 018 .25z">
+                    </path>
+                </svg>
+                <div>Star</div>
+            </button>
+            <span>21,038</span>
+        </div>
+        <div class="btn-wrapper">
+            <button>
+                <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16"
+                     data-view-component="true"
+                     class="octicon octicon-repo-forked mr-2">
+                    <path fill-rule="evenodd"
+                          d="M5 3.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm0 2.122a2.25 2.25 0 10-1.5 0v.878A2.25 2.25 0 005.75 8.5h1.5v2.128a2.251 2.251 0 101.5 0V8.5h1.5a2.25 2.25 0 002.25-2.25v-.878a2.25 2.25 0 10-1.5 0v.878a.75.75 0 01-.75.75h-4.5A.75.75 0 015 6.25v-.878zm3.75 7.378a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm3-8.75a.75.75 0 100-1.5.75.75 0 000 1.5z">
+                    </path>
+                </svg>
+                <div>Fork</div>
+            </button>
+            <span>4,391</span>
+        </div>
+    </div>
+</section>
+<section></section>
+<section class="people-section">
+    <div class="container">
+    <h3 class="people-section__title">People Are Talking About Fork</h3>
+    <div class="wrapper">
+        <div class="item">
+            <img src="src/img/logo1.png" alt="" class="item__img">
+            <p class="item__text">Sed vestibulum scelerisque urna, eu finibus leo facilisis sit amet. Proin id
+                dignissim magna. Sed varius urna et pulvinar venenatis. </p>
+        </div>
+        <div class="item">
+            <img src="src/img/logo2.png" alt="" class="item__img">
+            <p class="item__text">Donec euismod dolor ut ultricies consequat. Vivamus urna ipsum, rhoncus molestie
+                neque ac, mollis eleifend nibh.</p>
+        </div>
+        <div class="item">
+            <img src="src/img/logo3.png" alt="" class="item__img">
+            <p class="item__text">In efficitur in velit et tempus. Duis nec odio dapibus, suscipit erat fringilla,
+                imperdiet nibh. Morbi tempus auctor felis ac vehicula. </p>
+        </div>
+        <div class="item">
+            <img src="src/img/logo4.png" alt="" class="item__img">
+            <p class="item__text">Sed vestibulum scelerisque urna, eu finibus leo facilisis sit amet. Proin id
+                dignissim magna. Sed varius urna et pulvinar venenatis. </p>
+        </div>
+        <div class="item">
+            <img src="src/img/logo5.png" alt="" class="item__img">
+            <p class="item__text">Praesent ut eros tristique, malesuada lectus vel, lobortis massa. Nulla faucibus
+                lorem id arcu consequat faucibus. </p>
+        </div>
+        <div class="item">
+            <img src="src/img/logo6.png" alt="" class="item__img">
+            <p class="item__text">Fusce pharetra erat id odio blandit, nec pharetra eros venenatis. Pellentesque
+                porttitor cursus massa et vestibulum.</p>
+        </div>
+    </div>
+    <p class="people-section__text">Duis lobortis arcu sed arcu tincidunt feugiat. Nulla nisi mauris, facilisis vitae
+        aliquet id, imperdiet quis nibh. Donec eget elit eu libero tincidunt consequat nec elementum orci. Cum sociis
+        natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
+    </div>
+</section>
+<section>
+</section>
+<script src='./dist/js/scripts.min.js'></script>
 </body>
 </html>
