section what-you-get finished

--- a/index.html
+++ b/index.html
@@ -91,7 +91,48 @@
         </div>
     </div>
 </section>
-<section></section>
+<section class="what-you-get-section">
+    <h2 class="what-you-get-section__title">&ltHere is what you get&gt</h2>
+    <img class="what-you-get-section__img" src="./dist/img/what-you-get-code.png" alt="">
+    <div class="article-wrapper">
+        <article>
+            <img src="./dist/img/what-icon1.png" alt="">
+            <div>
+                <h4>Creatred to Make The Web Better</h4>
+                <p>Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet vulputate dignissim. Sed id metus id quam
+                    auctor
+                    molestie eget ut augue.</p>
+            </div>
+        </article>
+        <article>
+            <img src="./dist/img/what-icon2.png" alt="">
+            <div>
+                <h4>Incredibly Powerful Tool</h4>
+                <p>Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat massa placerat ac. Curabitur
+                    dapibus
+                    iaculis mi gravida luctus. Aliquam erat volutpat.</p>
+            </div>
+        </article>
+        <article>
+            <img src="./dist/img/what-icon3.png" alt="">
+            <div>
+                <h4>Experimental Stuff</h4>
+                <p>Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat massa placerat ac. Curabitur
+                    dapibus
+                    iaculis mi gravida luctus. Aliquam erat volutpat.</p>
+            </div>
+        </article>
+        <article>
+            <img src="./dist/img/what-icon4.png" alt="">
+            <div>
+                <h4>Creatred to Make The Web Better</h4>
+                <p>Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat massa placerat ac. Curabitur
+                    dapibus
+                    iaculis mi gravida luctus. Aliquam erat volutpat.</p>
+            </div>
+        </article>
+    </div>
+</section>
 <section class="people-section">
     <div class="container">
     <h3 class="people-section__title">People Are Talking About Fork</h3>
