--- a/index.html
+++ b/index.html
@@ -173,7 +173,42 @@
         natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
     </div>
 </section>
-<section>
+<section class="prices-section">
+    <h2 class="prices-section__title">Fork Subscription Pricing</h2>
+    <div class="prices-section__wrapper">
+        <div class="tariff-plan">
+            <h3>Students</h3>
+            <h4 class="tariff-plan__price">$<span>29</span></h4>
+            <p>per Month</p>
+            <hr>
+            <p>Personal License</p>
+            <a href="#">purchase</a>
+        </div>
+        <div class="tariff-plan">
+            <h3>professional</h3>
+            <h4 class="tariff-plan__price">$<span>59</span></h4>
+            <p>per Month</p>
+            <hr>
+            <p>Professional License<br>Email Support</p>
+            <a href="#">purchase</a>
+        </div>
+        <div class="tariff-plan tariff-plan--main">
+            <h3>agency</h3>
+            <h4 class="tariff-plan__price">$<span>99</span></h4>
+            <p>per Month</p>
+            <hr>
+            <p>1-12 Team Members<br>Support</p>
+            <a href="#">purchase</a>
+        </div>
+        <div class="tariff-plan">
+            <h3>enterprise</h3>
+            <h4 class="tariff-plan__price">$<span>159</span></h4>
+            <p>per Month</p>
+            <hr>
+            <p class="tariff-plan__text">Unlimited Team Members<br> 7 Phone Support</p>
+            <a href="#">purchase</a>
+        </div>
+    </div>
 </section>
 <script src='./dist/js/scripts.min.js'></script>
 </body>
