section prices desktop done

--- a/index.html
+++ b/index.html
@@ -178,35 +178,51 @@
     <div class="prices-section__wrapper">
         <div class="tariff-plan">
             <h3>Students</h3>
-            <h4 class="tariff-plan__price">$<span>29</span></h4>
-            <p>per Month</p>
-            <hr>
-            <p>Personal License</p>
-            <a href="#">purchase</a>
+            <div class="tariff-plan__wrap">
+                <div>
+                    <h4>$<span>29</span></h4>
+                    <p class="tariff-plan__wrap__month">per Month</p>
+                    <hr>
+                </div>
+                <p class="tariff-plan__wrap__text">Personal License</p>
+                <a class="btn-purchase" href="#">purchase</a>
+            </div>
         </div>
         <div class="tariff-plan">
             <h3>professional</h3>
-            <h4 class="tariff-plan__price">$<span>59</span></h4>
-            <p>per Month</p>
-            <hr>
-            <p>Professional License<br>Email Support</p>
-            <a href="#">purchase</a>
+            <div class="tariff-plan__wrap">
+                <div>
+                    <h4>$<span>59</span></h4>
+                    <p class="tariff-plan__wrap__month">per Month</p>
+                    <hr>
+                </div>
+                <p class="tariff-plan__wrap__text">Professional License<br>Email Support</p>
+                <a class="btn-purchase" href="#">purchase</a>
+            </div>
         </div>
         <div class="tariff-plan tariff-plan--main">
             <h3>agency</h3>
-            <h4 class="tariff-plan__price">$<span>99</span></h4>
-            <p>per Month</p>
-            <hr>
-            <p>1-12 Team Members<br>Support</p>
-            <a href="#">purchase</a>
+            <div class="tariff-plan__wrap tariff-plan--main__wrap">
+                <div>
+                    <h4>$<span>99</span></h4>
+                    <p class="tariff-plan__wrap__month">per Month</p>
+                    <hr>
+                </div>
+                <p class="tariff-plan__wrap__text">1-12 Team Members<br>Support</p>
+                <a class="btn-purchase btn-purchase--main" href="#">purchase</a>
+            </div>
         </div>
         <div class="tariff-plan">
             <h3>enterprise</h3>
-            <h4 class="tariff-plan__price">$<span>159</span></h4>
-            <p>per Month</p>
-            <hr>
-            <p class="tariff-plan__text">Unlimited Team Members<br> 7 Phone Support</p>
-            <a href="#">purchase</a>
+            <div class="tariff-plan__wrap">
+                <div>
+                    <h4>$<span>159</span></h4>
+                    <p class="tariff-plan__wrap__month">per Month</p>
+                    <hr>
+                </div>
+                <p class="tariff-plan__wrap__text">Unlimited Team Members<br> 7 Phone Support</p>
+                <a class="btn-purchase" href="#">purchase</a>
+            </div>
         </div>
     </div>
 </section>
