section prices finished

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 <section class="prices-section">
     <h2 class="prices-section__title">Fork Subscription Pricing</h2>
     <div class="prices-section__wrapper">
-        <div class="tariff-plan">
+        <div class="tariff-plan tariff-plan--first">
             <h3>Students</h3>
             <div class="tariff-plan__wrap">
                 <div>
